--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF=8">
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <title>Project1</title>
+    <title>Project2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="page1">
     <header>
         <nav class="navbar">
             <div class ="logo">
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href = "webpages/secondWebpage.html">SHOP</a></li>
                 <li><a href = "#footer">ABOUT</a></li>
-                <li><a href = "webpages/secondWebpage.html">CART</a></li>
-                <li><a href = "webpages/secondWebpage.html">CONTACT</a></li>
+                <li><a href = "webpages/thirdWebpage.html">GROUP</a></li>
+                <li><a href = "#footer">CONTACT</a></li>
             </ul>
         </nav>
         <h1 id="top">PLAN YOUR ADVENTURE</h1>
