--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
                 </div>
             </div>
         </div>
+        <div class="content-more">
+            <div class="about">
+                <a><img id="about" src="/images/logobg.png"></a>
+            </div>
+            <div class="row">
+                <div class="col 1">
+                    <h2>About Us</h2>
+                    <p id="aboutus">
+                        &nbsp;&nbsp;&nbsp; At Larana, we're passionate about the great outdoors and committed to making your adventures unforgettable. Whether you're a weekend warrior or a seasoned explorer,
+                        we offer a carefully curated selection of high-quality camping gear designed to enhance your experience in nature.<br>
+                        &nbsp;&nbsp;&nbsp; Founded by a group of outdoor enthusiasts, our goal is simple: to provide campers, hikers, and backpackers with reliable equipment they can trust.
+                        From tents and sleeping bags to cooking gear and accessories, we source products that combine durability, innovation, and comfort,ensuring that you're always ready to take on the next adventure.<br>
+                        &nbsp;&nbsp;&nbsp; We believe that the best memories are made around a campfire, on the trail, and under a starlit sky.
+                        Let us help you gear up for your next outdoor journey—because adventure is out there, and we've got the gear to get you there.
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer id="footer">
